# OP-ZisK

./: .gitignore  .sepolia.env  CONTRIBUTING.md  Cargo.toml  EIGENDA_ZISK_MIGRATION.md  README.md  RELEASE.md  contracts  docker-compose.yml  justfile  test-components.sh
archive/: UPSTREAM_CONTRACTS.md
bindings/: Cargo.toml  build.rs
fault-proof/: Cargo.toml  Dockerfile.challenger  Dockerfile.proposer  Dockerfile.proposer.celestia  Dockerfile.proposer.eigenda
fault-proof/grafana/dashboards/: dashboard.json
fault-proof/src/: challenger.rs  config.rs  contract.rs  lib.rs  prometheus.rs  proposer.rs
fault-proof/tests/: integration.rs  sync.rs
fault-proof/tests/common/: anvil.rs  constants.rs  contracts.rs  env.rs  monitor.rs  process.rs
programs/aggregation/: Cargo.toml
programs/aggregation/src/: main.rs
programs/range/celestia/: Cargo.toml
programs/range/celestia/src/: main.rs
programs/range/eigenda/: Cargo.toml
programs/range/eigenda/src/: main.rs
programs/range/ethereum/: Cargo.toml
programs/range/ethereum/src/: main.rs
programs/range/utils/: Cargo.toml
programs/range/utils/src/: lib.rs
proof/: result.json
proof_after_cleanup/: result.json
proof_rerun/: result.json
scripts/prove/: Cargo.toml
scripts/prove/src/: lib.rs
scripts/prove/tests/: cycle_count_diff.rs  multi.rs
scripts/utils/: Cargo.toml
scripts/utils/src/: config_common.rs
tests/: README.md  justfile
tests/e2e/validity/bootstrap/: bootstrap_test.go
tests/e2e/validity/proving/: proving_test.go
tests/presets/: faultproof.go  shared.go  validity.go
tests/utils/: adapters.go
utils/celestia/client/: Cargo.toml
utils/celestia/client/src/: executor.rs
utils/celestia/host/: Cargo.toml
utils/celestia/host/src/: blobstream_utils.rs  host.rs  witness_generator.rs
utils/client/: Cargo.toml
utils/client/src/witness/: executor.rs
utils/config/: Cargo.toml
utils/config/src/: lib.rs
utils/eigenda/client/: Cargo.toml
utils/eigenda/client/src/: executor.rs
utils/eigenda/host/: Cargo.toml
utils/eigenda/host/src/: host.rs  witness_generator.rs
utils/elfs/: Cargo.toml
utils/ethereum/client/: Cargo.toml
utils/ethereum/client/src/: executor.rs
utils/ethereum/host/: Cargo.toml
utils/ethereum/host/src/: host.rs  witness_generator.rs
utils/host/: Cargo.toml
utils/host/src/: block_range.rs  constants.rs  contract.rs  fetcher.rs  host.rs  lib.rs  proof.rs
utils/host/src/witness_generation/: online_blob_store.rs  preimage_witness_collector.rs  traits.rs
utils/proof/: Cargo.toml
utils/proof/src/: lib.rs
utils/signer/: Cargo.toml
utils/signer/src/: lib.rs
validity/: Cargo.toml  Dockerfile  Dockerfile.celestia  Dockerfile.eigenda  build.rs
validity/src/: config.rs  contract.rs  env.rs  prom.rs  proof_requester.rs  proposer.rs  types.rs  utils.rs
validity/src/db/: client.rs  types.rs
