[workspace]
members = [
    "utils/client",
    "utils/host",
    "utils/build",
    "utils/config",
    "utils/celestia/client",
    "utils/celestia/host",
    "utils/eigenda/client",
    "utils/eigenda/host",
    "utils/proof",
    "utils/signer",
    "utils/ethereum/client",
    "utils/ethereum/host",
    "programs/range/utils",
    "programs/range/ethereum",
    "programs/range/celestia",
    "programs/aggregation",
    "validity",
    "fault-proof",
    "bindings",
    "scripts/utils",
    "scripts/prove",
    "programs/range/eigenda",
]
resolver = "2"

[workspace.package]
license = "MIT"
edition = "2021"
authors = ["ratankaliani", "zachobront", "fakedev9999", "yuwen01"]
homepage = "https://github.com/amiabix/OP-ZisK"
repository = "https://github.com/amiabix/OP-ZisK"
version = "3.4.0"

[workspace.dependencies]
# general
anyhow = { version = "1.0.86", default-features = false }
thiserror = { version = "2.0.3" }
cfg-if = "1.0.0"
spin = { version = "0.10.0" }
lru = "0.12.3"
async-trait = "0.1.80"
sha2 = "0.10.8"
tokio = { version = "1.44.2", features = ["full"] }
clap = "4.5.9"
cargo_metadata = "0.18.1"
dotenv = "0.15.0"
num-format = "0.4.4"
futures = "0.3.30"
serde_cbor = "0.11.2"
log = "0.4.22"
itertools = "0.13.0"
reqwest = { version = "0.12", features = ["json"] }
csv = "1.3.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.117", default-features = false }
rkyv = { version = "0.8", features = ["hashbrown-0_15", "std"] }
hex = "0.4.3"
bincode = "1.3.3"
base64 = "0.22.1"
tower-http = { version = "0.5.2", features = ["limit"] }
lazy_static = "1.5.0"
tracing = { version = "0.1.40", default-features = false }
tracing-subscriber = { version = "0.3.20", features = ["fmt", "json"] }
tracing-opentelemetry = "^0.24"
opentelemetry = { version = "^0.23.0", features = ["trace"] }
opentelemetry_sdk = { version = "^0.23.0", features = [
    "trace",
    "rt-tokio",
    "logs_level_enabled",
] }
opentelemetry-stdout = { version = "0.2.0", features = ["trace"] }
opentelemetry-otlp = { version = "^0.16.0", features = ["default", "logs"] }
opentelemetry-appender-tracing = "0.4.0"

metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"
metrics-process = "2.4.0"
strum = "0.27.1"
strum_macros = "0.27.1"
tempfile = "3.10.1"

# kona
kona-mpt = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2" }
kona-derive = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2", default-features = false }
kona-driver = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2" }
kona-preimage = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2", features = [
    "rkyv",
    "serde",
] }
kona-executor = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2" }
kona-proof = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2" }

kona-client = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2" }
kona-host = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2" }
kona-providers-alloy = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2" }
kona-rpc = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2", default-features = false }
kona-protocol = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2", default-features = false }
kona-registry = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2", default-features = false }
kona-genesis = { git = "https://github.com/op-rs/kona", tag = "kona-client/v1.2.2", default-features = false }

# hana
hana-blobstream = { git = "https://github.com/celestiaorg/hana", tag = "v1.4.0-mocha" }
hana-celestia = { git = "https://github.com/celestiaorg/hana", tag = "v1.4.0-mocha" }
hana-host = { git = "https://github.com/celestiaorg/hana", tag = "v1.4.0-mocha" }
hana-oracle = { git = "https://github.com/celestiaorg/hana", tag = "v1.4.0-mocha" }

# hokulea
hokulea-compute-proof = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
hokulea-eigenda = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
hokulea-host-bin = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
hokulea-proof = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
hokulea-witgen = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
hokulea-zkvm-verification = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
canoe-verifier = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
canoe-sp1-cc-host = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
canoe-sp1-cc-verifier = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }
canoe-verifier-address-fetcher = { git = "https://github.com/Layr-Labs/hokulea", tag = "hokulea-client/v1.1.2" }

# op-zisk
op-zisk-client-utils = { path = "utils/client" }
op-zisk-host-utils = { path = "utils/host" }
op-zisk-build-utils = { path = "utils/build" }
op-zisk-config = { path = "utils/config" }
op-zisk-elfs = { path = "utils/elfs" }
op-zisk-validity = { path = "validity" }
op-zisk-fp = { path = "fault-proof" }
op-zisk-ethereum-client-utils = { path = "utils/ethereum/client" }
op-zisk-ethereum-host-utils = { path = "utils/ethereum/host" }
op-zisk-celestia-client-utils = { path = "utils/celestia/client" }
op-zisk-celestia-host-utils = { path = "utils/celestia/host" }
op-zisk-eigenda-client-utils = { path = "utils/eigenda/client" }
op-zisk-eigenda-host-utils = { path = "utils/eigenda/host" }
op-zisk-proof-utils = { path = "utils/proof" }
op-zisk-signer-utils = { path = "utils/signer" }
op-zisk-signer-gcp-utils = { path = "utils/signer-gcp" }
op-zisk-range-utils = { path = "programs/range/utils" }
op-zisk-bindings = { path = "bindings" }

# Alloy (Network)
alloy-signer-local = { version = "1.1.0" }
alloy-provider = { version = "1.1.0" }
alloy-transport = { version = "1.1.0" }
alloy-transport-http = { version = "1.1.0" }
alloy-contract = { version = "1.1.0" }
alloy-network = { version = "1.1.0" }

# Alloy
alloy-rlp = { version = "0.3.12", default-features = false }
alloy-trie = { version = "0.9.1", default-features = false, features = [
    "ethereum",
] }
alloy-eips = { version = "1.1.0", default-features = false }
alloy-serde = { version = "1.1.0", default-features = false }
alloy-consensus = { version = "1.1.0", default-features = false }
alloy-rpc-types = { version = "1.1.0", default-features = false }
alloy-rpc-client = { version = "1.1.0", default-features = false }
alloy-node-bindings = { version = "1.1.0", default-features = false }
alloy-rpc-types-engine = { version = "1.1.0", default-features = false }
alloy-rpc-types-beacon = { version = "1.1.0", default-features = false }
alloy-rpc-types-eth = { version = "1.1.0", default-features = false }
alloy-rpc-types-trace = { version = "1.1.0", default-features = false }
alloy-signer = { version = "1.1.0", default-features = false }
alloy-signer-gcp = { version = "1.1.0", default-features = false }
alloy = { version = "1.1.0", features = [
    "reqwest",
    "network",
    "providers",
    "sol-types",
    "rpc-types",
] }

# Keccak with the SHA3 patch is more efficient than the default Keccak.
alloy-primitives = { version = "1.3.1", default-features = false, features = [
    "sha3-keccak",
] }
alloy-sol-types = { version = "1.3.1", default-features = false }
alloy-sol-macro = { version = "1.3.1", default-features = false }
alloy-chains = { version = "0.2.7", default-features = false }

# OP Alloy
op-alloy-consensus = { version = "0.22.0", default-features = false }
op-alloy-rpc-types = { version = "0.22.0", default-features = false }
op-alloy-rpc-types-engine = { version = "0.22.0", default-features = false }
op-alloy-network = { version = "0.22.0", default-features = false }

# Execution
alloy-evm = { version = "0.22.6", default-features = false }
alloy-op-evm = { version = "0.22.6", default-features = false }
# Use kzg-rs and substrate-bn for the zkVM.
revm = { version = "30.2.0", default-features = false, features = [
    "bn",
] }
revm-precompile = { version = "28.1.1", default-features = false }
op-revm = { version = "11.3.0", default-features = false }

# ZisK
zisk-sdk = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.14.0" }
zisk-common = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.14.0" }
ziskos = { git = "https://github.com/0xPolygonHermez/zisk.git", tag = "v0.14.0" }

# kzg
kzg-rs = { version = "0.2.7", features = ["rkyv", "serde"] }
c-kzg = { version = "2.0.0", default-features = false }

# Cloud dependencies
gcloud-sdk = "0.27"

[profile.release-client-lto]
inherits = "release"
panic = "abort"
codegen-units = 1
lto = "fat"

# ZisK doesn't require these patches

[patch.crates-io]
# The crates.io `kzg-rs` release is SP1-targeted (depends on `sp1_bls12_381`, which requires SP1 syscalls).
# For ZisK we vendor the crate and swap to the upstream `bls12_381` backend so it links on the ZisK target.
kzg-rs = { path = "vendor/kzg-rs" }
