[package]
name = "aggregation"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "aggregation"
path = "src/main.rs"
# This is a zkVM program binary; it expects zkVM-style input and should not run under `cargo test`.
test = false
bench = false

[dependencies]
sha2.workspace = true
ziskos.workspace = true
op-zisk-client-utils.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
serde_cbor.workspace = true
bincode.workspace = true
