[package]
name = "op-zisk-prove"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "multi"
path = "bin/multi_zisk.rs"

[[bin]]
name = "agg"
path = "bin/agg_zisk.rs"

[dependencies]

# workspace
tokio.workspace = true
clap.workspace = true
cargo_metadata.workspace = true
anyhow.workspace = true
dotenv.workspace = true
csv.workspace = true
tracing.workspace = true
cfg-if.workspace = true
serde_json.workspace = true
serde.workspace = true

# local
op-zisk-host-utils.workspace = true
op-zisk-client-utils.workspace = true
op-zisk-proof-utils.workspace = true
op-zisk-scripts = { path = "../utils" }
op-zisk-elfs.workspace = true
op-zisk-fp.workspace = true

# alloy
alloy-contract.workspace = true
alloy-eips.workspace = true
alloy-network.workspace = true
alloy-node-bindings.workspace = true
alloy-primitives.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-signer-local.workspace = true
alloy-sol-types.workspace = true
alloy-transport-http = { workspace = true, features = [
    "reqwest",
    "reqwest-native-tls",
] }

# ZisK
zisk-sdk.workspace = true
zisk-common.workspace = true

[dev-dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
op-zisk-build-utils.workspace = true

[features]
default = ["ethereum"]
celestia = ["op-zisk-proof-utils/celestia"]
eigenda = ["op-zisk-proof-utils/eigenda"]
ethereum = ["op-zisk-proof-utils/ethereum"]
legacy-sp1 = []
