[package]
name = "op-zisk-scripts"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "op_zisk_scripts"
path = "src/lib.rs"

[[bin]]
name = "fetch-and-save-proof"
path = "bin/fetch_and_save_proof.rs"
required-features = ["legacy-sp1"]

[[bin]]
name = "config"
path = "bin/config.rs"

[[bin]]
name = "cost-estimator"
path = "bin/cost_estimator.rs"

[[bin]]
name = "block-data"
path = "bin/block_data.rs"

[[bin]]
name = "fetch-l2oo-config"
path = "bin/fetch_l2oo_config.rs"

[[bin]]
name = "fetch-fault-dispute-game-config"
path = "bin/fetch_fault_dispute_game_config.rs"

[[bin]]
name = "gen-sp1-test-artifacts"
path = "bin/gen_sp1_test_artifacts.rs"
required-features = ["legacy-sp1"]

[[bin]]
name = "preflight"
path = "bin/preflight_zisk.rs"

[dependencies]

# workspace
alloy-network.workspace = true
alloy-node-bindings.workspace = true
alloy-provider = { workspace = true, features = ["reqwest"] }
alloy-transport-http = { workspace = true, features = [
    "reqwest",
    "reqwest-native-tls",
] }
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-signer-local.workspace = true
alloy-eips.workspace = true
bincode.workspace = true
tokio.workspace = true
clap.workspace = true
cargo_metadata.workspace = true
anyhow.workspace = true
dotenv.workspace = true
log.workspace = true
csv.workspace = true
serde.workspace = true
futures.workspace = true
rayon = "1.10.0"
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

# ZisK
zisk-sdk.workspace = true
zisk-common.workspace = true

# local
op-zisk-host-utils.workspace = true
op-zisk-client-utils.workspace = true
op-zisk-proof-utils.workspace = true
op-zisk-elfs.workspace = true
op-zisk-fp.workspace = true

# sp1
# ZisK migration: sp1-sdk removed, use zisk-sdk if needed

[build-dependencies]
op-zisk-build-utils.workspace = true

[features]
default = ["ethereum"]
eigenda = ["op-zisk-proof-utils/eigenda"]
celestia = ["op-zisk-proof-utils/celestia"]
ethereum = ["op-zisk-proof-utils/ethereum"]
legacy-sp1 = []
