[package]
name = "op-zisk-proof-utils"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]

# local
op-zisk-celestia-host-utils = { workspace = true, optional = true }
op-zisk-eigenda-host-utils = { workspace = true, optional = true }
op-zisk-elfs.workspace = true
op-zisk-ethereum-host-utils = { workspace = true, optional = true }
op-zisk-host-utils.workspace = true

# general
cfg-if.workspace = true
tracing.workspace = true

[features]
default = ["ethereum"]
celestia = ["op-zisk-celestia-host-utils"]
eigenda = ["op-zisk-eigenda-host-utils"]
ethereum = ["op-zisk-ethereum-host-utils"]
