[package]
name = "range-celestia"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[[bin]]
name = "range-celestia"
path = "src/main.rs"
# This is a zkVM program binary; it expects zkVM-style input and should not run under `cargo test`.
test = false
bench = false

[dependencies]
# general
rkyv.workspace = true

# kona
kona-proof.workspace = true

# zisk
ziskos.workspace = true

# op-zisk
op-zisk-celestia-client-utils.workspace = true
op-zisk-client-utils.workspace = true
op-zisk-range-utils.workspace = true

# `tracing-subscriber` feature dependencies
tracing-subscriber = { workspace = true, optional = true }

[features]
tracing-subscriber = ["dep:tracing-subscriber"]
