[package]
name = "range-eigenda"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# general
rkyv.workspace = true
serde_cbor.workspace = true

# kona
kona-proof.workspace = true

# hokulea
hokulea-proof.workspace = true
hokulea-zkvm-verification.workspace = true
# canoe
# ZisK Migration: Do not use SP1-specific Canoe verifier.
# We retain the generic Canoe traits + address fetcher (and can use no-op implementations for testing).
canoe-verifier.workspace = true
canoe-verifier-address-fetcher.workspace = true

# zisk
ziskos.workspace = true

# op-zisk
op-zisk-client-utils.workspace = true
op-zisk-eigenda-client-utils.workspace = true
op-zisk-range-utils.workspace = true

# `tracing-subscriber` feature dependencies
tracing-subscriber = { workspace = true, optional = true }

[features]
tracing-subscriber = ["dep:tracing-subscriber"]
