[package]
name = "op-zisk-range-utils"
version.workspace = true
license.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tracing.workspace = true
anyhow.workspace = true
rkyv.workspace = true
bincode.workspace = true

# kona
kona-proof.workspace = true

# zisk
ziskos.workspace = true

# op-zisk
op-zisk-client-utils.workspace = true

# `tracing-subscriber` feature dependencies
tracing-subscriber = { workspace = true, optional = true }

[features]
tracing-subscriber = ["dep:tracing-subscriber"]
