[package]
name = "op-zisk-celestia-host-utils"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# zisk
zisk-common.workspace = true

# local
op-zisk-celestia-client-utils.workspace = true
op-zisk-client-utils.workspace = true
op-zisk-host-utils.workspace = true

# kona
kona-preimage.workspace = true
kona-proof.workspace = true
kona-rpc.workspace = true

# hana
hana-blobstream.workspace = true
hana-host.workspace = true
hana-oracle.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-eips.workspace = true
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-rpc-types.workspace = true
alloy-sol-types.workspace = true

# general
anyhow.workspace = true
async-trait.workspace = true
rkyv.workspace = true
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing.workspace = true
