[package]
name = "op-zisk-eigenda-host-utils"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# zisk
zisk-common.workspace = true

# local
op-zisk-eigenda-client-utils.workspace = true
op-zisk-client-utils.workspace = true
op-zisk-host-utils.workspace = true

# kona
kona-preimage.workspace = true
kona-proof.workspace = true

# hokulea
hokulea-compute-proof.workspace = true
hokulea-eigenda.workspace = true
hokulea-host-bin.workspace = true
hokulea-proof.workspace = true
hokulea-witgen.workspace = true
# Removed: canoe-sp1-cc-host (SP1-specific, not compatible with ZisK)
canoe-verifier-address-fetcher.workspace = true

# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true

# general
anyhow.workspace = true
async-trait.workspace = true
rkyv.workspace = true
serde_cbor.workspace = true
