[package]
name = "op-zisk-ethereum-host-utils"
version.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
# zisk
zisk-common.workspace = true

# local
op-zisk-client-utils.workspace = true
op-zisk-ethereum-client-utils.workspace = true
op-zisk-host-utils.workspace = true

# kona
kona-derive.workspace = true
kona-host.workspace = true
kona-preimage.workspace = true
kona-proof.workspace = true

# alloy
alloy-eips.workspace = true
alloy-primitives.workspace = true

# general
anyhow.workspace = true
async-trait.workspace = true
rkyv.workspace = true
